[package]
name = "texasimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.6.3"
image = "0.24.1"
arboard = "2.1.0"
structopt = "0.3"
ansi_term = "0.12"
