[package]
edition = "2021"
name = "texasimg"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
image = "0.24.1"
mktemp = "0.4"
poppler = "0.3.2"
resvg = "0.22.0"
tectonic = "0.8.2"
tectonic_bridge_core = "0.3.0"
tiny-skia = "0.6.3"
usvg = "0.22.0"
cairo-rs = { version = "0.15.10", features = ["svg"] }
