[package]
name = "texasimg_overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "overlay"
path = "src/bin/overlay.rs"

[dependencies]
glfw = { version = "0.44.0", git = "https://github.com/coderedart/glfw-rs.git", features = ["all"] }
bytemuck = "1"
egui = { version = "0.17.0", features = ["convert_bytemuck", "default_fonts"] }
egui_extras = { version = "0.17.0", features = ["image"] }
wgpu = {version = "*", git = "https://github.com/gfx-rs/wgpu.git"}

image = "0.24.1"
arboard = "2.1.0"

mktemp = "0.4"
texasimg = { path = "../texasimg" }


#[dev-dependencies]
pollster = "0.2"
