[package]
name = "texasimg_overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "overlay"
path = "src/bin/overlay.rs"

[dependencies]
bytemuck = "1"
eframe = { git = "https://github.com/emilk/egui", version = "0.19.0"}
egui_extras = { git = "https://github.com/emilk/egui", version = "0.19.0", features = ["image"]}

image = "0.24.1"
arboard = "3.2.0"

mktemp = "0.4"
texasimg = { path = "../texasimg" }
poll-promise = "0.1"

#[dev-dependencies]
pollster = "0.2"
