[package]
name = "teximex_overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
bytemuck = "1.12.3"

eframe = { git = "https://github.com/emilk/egui", branch = "master", version = "0.19.0"}
egui_extras = { git = "https://github.com/emilk/egui", version = "0.19.0", branch = "master", features = ["image"]}

image = "0.24.5"
mktemp = "0.5.0"
teximex = { version = "0.1.0", path = "../teximex" }
